; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/busses/extr_i2c-pnx.c_i2c_pnx_arm_timer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/busses/extr_i2c-pnx.c_i2c_pnx_arm_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_adapter = type { i32, %struct.i2c_pnx_algo_data* }
%struct.i2c_pnx_algo_data = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.timer_list }
%struct.timer_list = type { i32, i64 }

@I2C_PNX_TIMEOUT = common dso_local global i32 0, align 4
@HZ = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"Timer armed at %lu plus %u jiffies.\0A\00", align 1
@jiffies = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.i2c_adapter*)* @i2c_pnx_arm_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i2c_pnx_arm_timer(%struct.i2c_adapter* %0) #0 {
  %2 = alloca %struct.i2c_adapter*, align 8
  %3 = alloca %struct.i2c_pnx_algo_data*, align 8
  %4 = alloca %struct.timer_list*, align 8
  %5 = alloca i32, align 4
  store %struct.i2c_adapter* %0, %struct.i2c_adapter** %2, align 8
  %6 = load %struct.i2c_adapter*, %struct.i2c_adapter** %2, align 8
  %7 = getelementptr inbounds %struct.i2c_adapter, %struct.i2c_adapter* %6, i32 0, i32 1
  %8 = load %struct.i2c_pnx_algo_data*, %struct.i2c_pnx_algo_data** %7, align 8
  store %struct.i2c_pnx_algo_data* %8, %struct.i2c_pnx_algo_data** %3, align 8
  %9 = load %struct.i2c_pnx_algo_data*, %struct.i2c_pnx_algo_data** %3, align 8
  %10 = getelementptr inbounds %struct.i2c_pnx_algo_data, %struct.i2c_pnx_algo_data* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store %struct.timer_list* %11, %struct.timer_list** %4, align 8
  %12 = load i32, i32* @I2C_PNX_TIMEOUT, align 4
  %13 = load i32, i32* @HZ, align 4
  %14 = sdiv i32 1000, %13
  %15 = sdiv i32 %12, %14
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %5, align 4
  %17 = icmp sle i32 %16, 1
  br i1 %17, label %18, label %19

18:                                               ; preds = %1
  store i32 2, i32* %5, align 4
  br label %19

19:                                               ; preds = %18, %1
  %20 = load %struct.timer_list*, %struct.timer_list** %4, align 8
  %21 = call i32 @del_timer_sync(%struct.timer_list* %20)
  %22 = load %struct.i2c_adapter*, %struct.i2c_adapter** %2, align 8
  %23 = getelementptr inbounds %struct.i2c_adapter, %struct.i2c_adapter* %22, i32 0, i32 0
  %24 = load i32, i32* @jiffies, align 4
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @dev_dbg(i32* %23, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i32 %24, i32 %25)
  %27 = load i32, i32* @jiffies, align 4
  %28 = load i32, i32* %5, align 4
  %29 = add nsw i32 %27, %28
  %30 = load %struct.timer_list*, %struct.timer_list** %4, align 8
  %31 = getelementptr inbounds %struct.timer_list, %struct.timer_list* %30, i32 0, i32 0
  store i32 %29, i32* %31, align 8
  %32 = load %struct.i2c_adapter*, %struct.i2c_adapter** %2, align 8
  %33 = ptrtoint %struct.i2c_adapter* %32 to i64
  %34 = load %struct.timer_list*, %struct.timer_list** %4, align 8
  %35 = getelementptr inbounds %struct.timer_list, %struct.timer_list* %34, i32 0, i32 1
  store i64 %33, i64* %35, align 8
  %36 = load %struct.timer_list*, %struct.timer_list** %4, align 8
  %37 = call i32 @add_timer(%struct.timer_list* %36)
  ret void
}

declare dso_local i32 @del_timer_sync(%struct.timer_list*) #1

declare dso_local i32 @dev_dbg(i32*, i8*, i32, i32) #1

declare dso_local i32 @add_timer(%struct.timer_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
